--- a/src/wp-content/plugins/wp-erp/assets/css/admin.css
+++ b/src/wp-content/plugins/wp-erp/assets/css/admin.css
@@ -1965,6 +1965,9 @@ table.leaves th#reason {
 table.leaves th#approved_by {
   width: 150px;
 }
+table.leaves th#report {
+  width: 100px;
+}
 table.leaves td.column-status {
   font-size: 11px;
   font-weight: bold;
